--- a/econome/index2.html
+++ b/econome/index2.html
@@ -28,7 +28,7 @@
                     <li><a href="#section-3">Kritikpunkte</a></li>
                 </ul>
             </div>
-            <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1" style="padding: 0">
+            <div class="col s10 m10 l12 offset-s1 offset-m1" style="padding: 0">
                 <section id="section-0" class="section scrollspy">
                     <img src="media/ezbHeader.jpg" alt="ezb Neubau"/>
                     <h6>Foto: <a href="https://www.flickr.com/photos/xingxiyang/">Kiefer</a>; EZB Neubau in Frankfurt am Main</h6>
@@ -57,7 +57,7 @@
                             wobei			P: Preisniveau,		U: Umlaufgeschwindigkeit des Geldes,
                             M: Geldmenge,	Y: Reale Produktion, (Handelsvolumen)
                                 <br>
-                            Eine hohe Geldmenge (mehr Geld produziert) bzw. Umlaufgeschwindigkeit (bei konstanter Produktion) oder eine geringe reale Produktion (bei konstanter Geldmenge und Umlaufgeschwindigkeit) sorgt demnach für einen Anstieg des Preisniveaus und somit eine höhere Inflationsrate.
+                            Eine hohe Geldmenge (mehr Geld produziert) bzw. Umlaufgeschwindigkeit (bei konstanter Produktion) oder eine geringe Reale Produktion (bei konstanter Geldmenge und Umlaufgeschwindigkeit) sorgt demnach für einen Anstieg des Preisniveaus und somit eine höhere Inflationsrate.
                             </p>
                             <a class="btn-floating waves-effect waves-light btn exp" onclick="expandText('#card-1')"><i class="material-icons left">arrow_downward</i></a>
                             <div class="expandable">
@@ -77,6 +77,7 @@
                                 </p>
                                 <div class="card-image">
                                     <img src="media/5milliardenMark.jpg" alt="5-Milliarden Mark Geldschein">
+                                    <h6>Bild: <a href="https://commons.wikimedia.org/wiki/File:5_milliarden_mark.jpg">Wikimedia</a>; Ein Geldschein welcher 5 milliarden Mark wert ist</h6>
                                 </div>
                                 <p>
                                     <br>
@@ -994,15 +995,17 @@
                             </p>
                         </div>
                     </div>
-                    <!-- Graphik Europa Eurosystem, EU-Länder und nicht-EU-Länder -->
                     <div id="card-3" class="card">
                         <div class="card-content grey-text">
                             <span class="card-title">Das Eurosystem</span>
                             <div class="divider"></div>
                             <div class="center-align">
                                 <img src="media/Eurosystem.png" alt="Karte der Euroländer und EU-Länder mit einer eigenen Währung"/>
+                                <h6>Karte: <a href="#">Wikimedia</a>; Europäische Länder im Verhältnis zur EU</h6>
                             </div>
-                            <p>Die meisten Länder in der EU haben den Euro als Währung eingeführt und bilden das <span class="darkblue-underline">Eurosystem</span>. Hier steuert die EZB die Geldpolitik. Dänemark ist im Europäischen Währungssystem II (<span class="orange-underline">WKM-II</span>), die Dänische Krone darf nur 15 Prozent vom Euro Wechselkurs abweichen. Alle EU-Länder mit <span class="red-underline">eigener Währung</span> haben eine nationale Zentralbank welche eigenständig die dortige Geldpolitik steuert.</p>
+                            <p>
+                            <br>    
+                            Die meisten Länder in der EU haben den Euro als Währung eingeführt und bilden das <span class="darkblue-underline">Eurosystem</span>. Hier steuert die EZB die Geldpolitik. Dänemark ist im Europäischen Währungssystem II (<span class="orange-underline">WKM-II</span>), die Dänische Krone darf nur 15 Prozent vom Euro Wechselkurs abweichen. Alle EU-Länder mit <span class="red-underline">eigener Währung</span> haben eine nationale Zentralbank welche eigenständig die dortige Geldpolitik steuert.</p>
                         </div>
                     </div>
                     <div class="card">
@@ -1020,10 +1023,12 @@
                             </p>
                         </div>
                     </div>
-                    <!-- parallaktisches Bild der fed -->
-                    <div class="parallax-container">
-                        <div class="parallax"><img src="media/fed.jpg"></div>
-                    </div>
+                    <div class="wideImage">
+                        <div class="center">
+                            <img src="media/fed.jpg">
+                        </div>
+                        <h6>Foto: <a href="#">Wikimedia</a>; Federal Reserve (fed), Amerikanische Zentralbank</h6>
+                    </div>    
                     <div class="card">
                         <div class="card-content grey-text">
                             <span class="card-title">Warum genau 2% Inflationsrate?</span>
@@ -1050,13 +1055,16 @@
                             <div class="divider"></div>
                             <p>
                             Während die 2% Inflationsrate und die Niedrigzinspolitik bewährte Mittel zum Unterstützen des Wirtschaftswachstums sind, gibt es seit der Gründung der EZB am 1. Juni 1998 Kritik an der europäischen Zentralbank. Die Inflation wird in Deutschland oftmals als zu hoch eingestuft, da Deutsche im Vergleich zu anderen Europäern überdurchschnittlich hoch sparen und das Geld an Wert verliert. Ein anderer Kritikpunkt ist der Versuch der EZB strukturelle, demographische Probleme mit einer deflationären Wirkung durch künstliche Inflation auszugleichen. Die Baby-Boomer Generation verlässt langsam aber sicher den Arbeitsmarkt. Dem Markt entgehen so viele qualifizierte Arbeitskräfte die nach einer langen Karriere auch gut bezahlt sind. Sie legen den Großteil ihres Vermögens wahrscheinlich auch zur Altersversorgung weg. Die Bank of Japan (BoJ) habe schon Versucht durch hohe Inflation und niedrige Zinsen die demographischen Effekte zu Umgehen und sei gescheitert, so die Kritiker.
-                                <br>
+                            </p>
+                            <div class="center-align">
+                                <img src="media/oliverBlanchard.jpg" style="width: 60%; margin-top: 1vh">
+                                <h6>Foto: <a href="#">Wikimedia</a>; Oliver Blanchard, prominenter Befürworter für eine Inflationsrate von 4%</h6>
+                            </div>
+                            <p>
+                            <br>
                             Die Zinspolitik wird besonders gerne angegriffen, da andere Zentralbanken zeigen das es Alternativen zu der Niedrigzinspolitik gibt. Diese hat eine Inflationäre Wirkung und bestraft mit den niedrigen Zinsen beim Anlegen wieder den gemeinen Sparer.
                             </p>
                         </div>
-                    </div>
-                    <div class="parallax-container">
-                        <div class="parallax"><img src="media/oliverBlanchard.jpg"></div>
                     </div>
                     <div class="card">
                         <div class="card-content grey-text">
@@ -1072,7 +1080,10 @@
         </div>
     </main>
     <footer>
-        &copy;2019 Footer
+        <div class="center">
+            <a href="pages/glossar.html" style="margin-right: 20vw">Glossar</a>
+            <a href="pages/quellen.html">Quellen</a>
+        </div>
     </footer>
 </body>
 </html>
