--- a/econome/index.html
+++ b/econome/index.html
@@ -1001,8 +1001,8 @@
                             <span class="card-title">Das Eurosystem</span>
                             <div class="divider"></div>
                             <div class="center-align">
-                                <img src="media/Eurosystem.png" alt="Mape der Euroländer und EU-Länder mit einer eigenen Währung"/>
-                                <h6>Karte: <a href="#">Wikimedia</a>; Europäische Länder im Verhältnis zur EU</h6>
+                                <img src="media/Eurosystem.png" alt="Karte der Euroländer und EU-Länder mit einer eigenen Währung"/>
+                                <h6>Karte: <a href="https://de.wikipedia.org/wiki/Europ%C3%A4ische_Wirtschafts-_und_W%C3%A4hrungsunion#/media/File:Europ%C3%A4ische_Wirtschafts-_und_W%C3%A4hrungsunion_2.svg">Wikimedia</a>; Europäische Länder im Verhältnis zur EU</h6>
                             </div>
                             <p>
                             <br>    
@@ -1028,7 +1028,7 @@
                         <div class="center">
                             <img src="media/fed.jpg">
                         </div>
-                        <h6>Foto: <a href="#">Wikimedia</a>; Federal Reserve (fed), Amerikanische Zentralbank</h6>
+                        <h6>Foto: <a href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%80%D0%B5%D0%B7%D0%B5%D1%80%D0%B2%D0%BD%D0%B0%D1%8F_%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0#/media/File:Federal_Reserve.jpg">Wikimedia</a>; Federal Reserve (fed), Amerikanische Zentralbank</h6>
                     </div>    
                     <div class="card">
                         <div class="card-content grey-text">
@@ -1059,7 +1059,7 @@
                             </p>
                             <div class="center-align">
                                 <img src="media/oliverBlanchard.jpg" style="width: 60%; margin-top: 1vh">
-                                <h6>Foto: <a href="#">Wikimedia</a>; Oliver Blanchard, prominenter Befürworter für eine Inflationsrate von 4%</h6>
+                                <h6>Foto: <a href="https://de.wikipedia.org/wiki/Olivier_Blanchard#/media/File:Oliver_Blanchard,_IMF_98BlanchardWEO1_lg.jpg">Wikimedia</a>; Oliver Blanchard, prominenter Befürworter für eine Inflationsrate von 4%</h6>
                             </div>
                             <p>
                             <br>
