--- a/econome/index.html
+++ b/econome/index.html
@@ -1083,7 +1083,8 @@
     <footer>
         <div class="center">
             <a href="pages/glossar.html" style="margin-right: 20vw">Glossar</a>
-            <a href="pages/quellen.html">Quellen</a>
+            <a href="pages/quellen.html" style="margin-right: 20vw">Quellen</a>
+			<div>Team: 2018-PUL-68</div>
         </div>
     </footer>
 </body>
