updated the discord invite link page

--- a/discord.html
+++ b/discord.html
@@ -1,3 +1,15 @@
-<script>
-	document.location = "https://discord.gg/acQjXZD";
-</script>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta content="... if you want to get the latest news about his projects, give him ideas for future projects, ideas for features in running projects or contribute your opinion to new features in polls." property="og:description">
+		<meta content="https://l0c4lh057.github.io/discord.png" property="og:image">
+		<link type="application/json+oembed" href="https://l0c4lh057.github.io/discord.json">
+		<meta name="theme-color" content="#7c7cff">
+		<script>
+			document.location = "https://discord.gg/acQjXZD";
+		</script>
+	</head>
+	<body>
+		If you don't get redirected click <a href="https://discord.gg/acQjXZD">this</a> link.
+	</body>
+</html>
